# Sentinel

./: .gitignore  AI_Understanding_Of_Sentinel.md  CLAUDE.md  README.md  ctl.sh  debug-sentinel.py  install.sh  pyproject.toml  query-inference.py  restart-daemon.sh  sentinel.service
sentinel/: api.py  config.py  daemon.py  monitor.py  request.py  status.py  watchdog.py
