[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-gpu"
version = "0.1.0"
description = "GPU arbitration daemon for shared research workstations"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sentinel-daemon  = "sentinel.daemon:main"
sentinel-request = "sentinel.request:main"
sentinel-status  = "sentinel.status:main"
sentinel-monitor = "sentinel.monitor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]
